fix style wrapform add display flex and etc

--- a/src/components/FormCRUD/FormCRUD.module.scss
+++ b/src/components/FormCRUD/FormCRUD.module.scss
@@ -1,81 +1,88 @@
 .containerForm {
   color: white;
 
-  .isAuth {
+  .title {
     font-size: 30px;
     color: black;
     text-align: center;
   }
 
-
-  .formAuth {
-    background-color: #6E6C78;
-    max-width: 460px;
-    margin: 0 auto 0 auto;
-    border: 2px solid #61dafb;
+  .wrapForm {
     display: flex;
-    flex-direction: column;
-    padding: 20px 40px;
-
-    h3 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    flex-wrap: wrap;
+    align-items: flex-start;
 
 
-    .row {
-      margin: 10px 0;
+    .form {
+      background-color: #6E6C78;
+      max-width: 460px;
+      margin: 0 auto 0 auto;
+      border: 2px solid #61dafb;
+      display: flex;
+      flex-direction: column;
+      padding: 20px 40px;
 
-      label {
-        font-weight: bold;
-
-
-        input {
-          width: 99%;
-          display: block;
-          height: 34px;
-          font-size: 16px;
-
-          &::placeholder {
-            font-size: 12px;
-          }
-        }
+      h3 {
+        text-align: center;
+        margin-bottom: 20px;
       }
 
-      &:last-child {
-        text-align: right;
 
-        .btnSubmit {
-          width: 100px;
-          background-color: #B7CF52;
-          color: #FFFFFF;
-          padding: 12px 0;
+      .row {
+        margin: 10px 0;
+
+        label {
           font-weight: bold;
-          font-size: 16px;
-          border: none;
-          margin-top: 20px;
-          margin-right: 15px;;
 
-          &:hover {
-            background-color: #94a844;
+
+          input {
+            width: 99%;
+            display: block;
+            height: 34px;
+            font-size: 16px;
+
+            &::placeholder {
+              font-size: 12px;
+            }
           }
+        }
 
-          &:active {
+        &:last-child {
+          text-align: right;
+
+          .btnSubmit {
+            width: 100px;
             background-color: #B7CF52;
+            color: #FFFFFF;
+            padding: 12px 0;
+            font-weight: bold;
+            font-size: 16px;
+            border: none;
+            margin-top: 20px;
+            margin-right: 15px;;
+
+            &:hover {
+              background-color: #94a844;
+            }
+
+            &:active {
+              background-color: #B7CF52;
+            }
           }
         }
       }
+
+      hr {
+        width: 100%;
+      }
     }
 
-    hr {
-      width: 100%;
+    .users {
+      font-size: 15px;
+      color: black;
+      text-align: center;
+      margin: 0 auto 0 auto;
     }
-  }
-
-  .users {
-    font-size: 15px;
-    color: black;
-    text-align: center;
   }
 }
 
